hphp/test/zend/good/ext/standard/tests/array/count_recursive.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (!extension_loaded("spl")) die("skip no SPL extension");
}
