hphp/test/zend/bad/ext/phar/tests/bug52013.php.skipif
<?php
if (!extension_loaded("phar")) die("skip");
if (!extension_loaded("zlib")) die("skip test needs zlib extension enabled to compress archives with gzip");
?>